--- a/colors.html
+++ b/colors.html
@@ -11,7 +11,22 @@
 
 <body>
 
+  <div class="container">
+    <div class="color red">
+    </div>
+    <div class="color red">
+    </div>
+    <div class="color red">
+    </div>
+    <div class="color red">
+    </div>
+
+  </div>
+
+  <a href="access-code.html" class="link">Restricted Data</a>
+
 </body>
+
 <script src="main.js"></script>
 
 </html>
