add webpage content

--- a/access-code.html
+++ b/access-code.html
@@ -11,7 +11,16 @@
 
 <body>
 
+  <h1>Restricted Access: Verification Reqeuired</h1>
+
+  <h2>Enter your 4-digit access code:</h2>
+
+  <input id="code">
+  <button type="button" id="button">Submit</button>
+
+  <h2><span class="attempt">3</span> Attempts Remaining</h2>
+
+  
 </body>
 <script src="main.js"></script>
-
 </html>
