--- a/access-code.html
+++ b/access-code.html
@@ -7,6 +7,8 @@
   <title>Access Code</title>
   <link rel="stylesheet" href="css/sanitize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Notable&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +22,8 @@
 
   <h2><span class="attempt">3</span> Attempts Remaining</h2>
 
-  
+
 </body>
 <script src="main.js"></script>
+
 </html>
