--- a/colors.html
+++ b/colors.html
@@ -9,16 +9,20 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="color-game-body">
 
   <div class="container">
     <div class="color red">
+      4     
+    </div>
+    <div class="color red">   
+      1 
     </div>
     <div class="color red">
+      3
     </div>
     <div class="color red">
-    </div>
-    <div class="color red">
+      2
     </div>
 
   </div>
