--- a/src/access-code.html
+++ b/src/access-code.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Notable&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="code-body">
 
   <h1>Restricted Access: Verification Reqeuired</h1>
 
