fix link to script

--- a/src/access-code.html
+++ b/src/access-code.html
@@ -20,5 +20,5 @@
   <button type="button" id="button">Submit</button>
 
 </body>
-<script src="js/main.js"></script>
+<script src="js/all.js"></script>
 </html>
